Fix Welcome Page scrollbar style
The welcome page scrollbar should no longer look bright in the
dark theme when using Chrome.

--- a/packages/cmk-frontend/src/themes/facelift/scss/_main.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_main.scss
@@ -1393,3 +1393,21 @@ div.swal2-popup {
 svg text {
   fill: $font-color;
 }
+
+/* Hide native scrollbar when Vue components handle scrolling */
+body.main div#main_page_content.vue-scrolling {
+  overflow: hidden;
+  height: 100%;
+  padding-right: 0;
+  padding-bottom: 0;
+
+  > * {
+    height: 100%;
+    display: block;
+
+    > .cmk-vue-app {
+      height: 100%;
+      display: block;
+    }
+  }
+}
